Add license message

--- a/_theme_packages/paxton/_includes/themes/paxton/contact.html
+++ b/_theme_packages/paxton/_includes/themes/paxton/contact.html
@@ -1,3 +1,5 @@
+﻿<!-- Part of the Paxton theme. See www.minchin.ca/theme-paxton
+     © 2013 William Minchin -->
 <div class="backing">
 	<h1>{{ page.title }}</h1>
 
