--- a/_theme_packages/paxton/_includes/themes/paxton/default.html
+++ b/_theme_packages/paxton/_includes/themes/paxton/default.html
@@ -1,5 +1,17 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
+<!-- The *Paxton* theme is Copyright © 2013 William Minchin.
+     See www.minchin.ca/theme-paxton
+
+     Permission is granted to you to use, copy, modify, merge, publish,
+     distribute, sublincense, and/or sell this software, and provide these
+     rights to others, provided:
+     + The above copyright notice and this permission notice shall be included
+     	in all copies or substantial portions of the software.
+     + Attribution is provided in the normal place for recognition of 3rd party
+     	contributions.
+     + You accept that this software is provided to you "as is", without
+         warranty.-->
   <head>
     <meta charset="utf-8" />
     <meta name="author" content="{{ site.author.name }}" />
