--- a/_theme_packages/paxton/_includes/themes/paxton/landing.html
+++ b/_theme_packages/paxton/_includes/themes/paxton/landing.html
@@ -1,3 +1,5 @@
+﻿<!-- Part of the Paxton theme. See www.minchin.ca/theme-paxton
+     © 2013 William Minchin -->
 <div id="main-title">
 	<h1 class="backing">{{ page.title }}</h1>
 
