--- a/_theme_packages/paxton/assets/themes/paxton/css/paxton.css
+++ b/_theme_packages/paxton/assets/themes/paxton/css/paxton.css
@@ -1,4 +1,18 @@
-﻿/* Fonts */
+﻿/* The *Paxton* theme is Copyright © 2013 William Minchin.
+ * See www.minchin.ca/theme-paxton
+ *
+ * Permission is granted to you to use, copy, modify, merge, publish,
+ * distribute, sublincense, and/or sell this software, and provide these
+ * rights to others, provided:
+ * + The above copyright notice and this permission notice shall be included
+ * 	in all copies or substantial portions of the software.
+ * + Attribution is provided in the normal place for recognition of 3rd party
+ * 	contributions.
+ * + You accept that this software is provided to you "as is", without
+ * 	warranty.
+ */
+
+/* Fonts */
 body {
 	font-family: 'Open Sans Condensed', sans-serif;
 }
