fix location of default background image

--- a/assets/themes/paxton/css/paxton.css
+++ b/assets/themes/paxton/css/paxton.css
@@ -48,7 +48,7 @@ html {
 
 body {
     background-color: #eee;
-    background: url('img/background-900.jpg') no-repeat center center fixed;
+    background: url('../img/background-900.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
        -moz-background-size: cover;
          -o-background-size: cover;
